--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git入門</title>
+    <title>Git入門1</title>
 </head>
 <body>
-    <h1>Git入門</h1>
+    <h1>Git入門1</h1>
 </body>
 </html>
